<resources>
    <string name="app_name">Personas</string>
    <string name="titulo_crear_personas">CREAR PERSONAS</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="titulo_listar_personas">LISTAR PERSONAS</string>
    <string name="numero">No.</string>
    <string name="listar">Listar</string>
    <string name="crear">Crear</string>
    <string name="mensaje_guardad_exitosamente">Persona guardada exitosamente</string>
    <string name="mensaje_error_cedula">Ingrese la cédula</string>
    <string name="mensaje_error_nombre">Ingrese el nombre</string>
    <string name="mensaje_error_apellido">Ingrese el apellido</string>
    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </string-array>
</resources>