<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarPersonas">

    <TextView
        android:id="@+id/lblTituloListar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_listar_personas"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblPersonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp">

            <TextView
                android:id="@+id/lblNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblcedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cedula"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblapellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/apellido"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>